# DIMENVUE-GUI

./: .gitignore  .gitmodules  CMakeLists.txt
src/: BackendMonitor.cpp  BackendMonitor.h  Dimenvue.cpp  Dimenvue.h  DimenvueDB.cpp  DimenvueDB.h  KoreanCharMaker.h  LanguageTranslationModel.h  SpaceDataModel.h  qml.qrc
src/backend/mockup/: CMakeLists.txt  context.cpp  mapVisualizer.cpp  scanList.cpp  scanView.cpp  sensors.cpp  setting.cpp  systemStatus.cpp
src/frontend/: BackendMonitor.cpp  CMakeLists.txt  CameraController.cpp  CameraController.h  Dimenvue.cpp  DimenvueDB.cpp  DimenvueDB.h  Hangul.h  HangulState.h  InputListenerChainExt.h  MapVisualizer.cpp  MapVisualizer.h  OgreEngine.cpp  OgreEngine.h  OpenGLItem.cpp  OpenGLItem.h  OverlayDrawer.cpp  OverlayDrawer.h  PointCloudItem.cpp  PointCloudItem.h  PointCloudQuickRenderer.cpp  QOgreItem.cpp  QOgreItem.h  QOgreRenderer.cpp  QOgreRenderer.h  RasterizerRenderer.cpp  RasterizerRenderer.h  SpaceDataModel.cpp  SpaceDataModel.h  SpaceDataSortProxyModel.cpp  SpaceDataSortProxyModel.h  VKey.pro  ViewportGrid.cpp  ViewportGrid.h  global.cpp  global.h  imgui.ini  main.cpp  main.qml  qml.qrc  (+4 more)
src/frontend/modules/: CMakeLists.txt
src/frontend/qml/: main.qml
src/frontend/qml/component/: Background.qml  ButtonLarge.qml  ButtonSmall.qml  CheckButton.qml  Circle.qml  GradientButton.qml  HelveticaCompressedText.qml  IconButton.qml  ImageButton.qml  MadalButton.qml  Modal.qml  SSD.qml  Setting.qml  SmallButtonOutlined.qml  TextButton.qml  TextField.qml  TitleBar.qml  ToggleButton.qml
src/frontend/qml/datalist/: DataGridDelegate.qml  DataListMain.qml  DataStorageInfo.qml  OpenMap.qml
src/frontend/qml/intro/: Intro.qml
src/frontend/qml/keyboard/: KeyboardKorInput.qml  KeyboardModelEng.qml  KeyboardModelEtc.qml  KeyboardModelKor.qml
src/frontend/qml/menu/: Menu.qml
src/frontend/qml/popup/: DataListSyncPopup.qml
src/frontend/qml/scan/: ScanComplete.qml  ScanCompleteLoading.qml  ScanControl.qml  Scanning.qml  ScanningLowDensityPopup.qml
src/frontend/qml/settings/: LanguageButton.qml  LanguageSelection.qml  Login.qml  NetworkSettingsPrevNext.qml  Settings.qml  SettingsBase.qml  SettingsDelegate.qml  SettingsMain23.qml  SettingsNetwork.qml  SettingsPhase.qml  SettingsPhaseText.qml  WifiConnection.qml  WifiList.qml  WifiListDelegate.qml  WifiPassword.qml
src/frontend/qml/testpcd/: main.qml
src/frontend/resources/localization/: Dimenvue_en-us.ts  Dimenvue_ko.qm
src/include/: context.hpp  mapVisualizer.hpp  scanList.hpp  scanView.hpp  sensors.hpp  setting.hpp  systemStatus.hpp
src/qml/: Debugvue.qml  Dimenvue.qml
src/qml/component/: ButtonList.qml  GradientBorder.qml  IntroButton.qml  Loading.qml  Modal.qml  RadioButton.qml  SmallButton.qml  SpinBox.qml  TextField.qml  User.qml
src/qml/datalist/: DataBaseDelegate.qml  DataListDelegate.qml  DataListHeader.qml  DataListMain.qml  DataStorageInfo.qml  DataTransfer.qml
src/qml/keyboard/: Keyboard.qml
src/qml/menu/: MenuButton.qml
src/qml/popup/: DataListSyncPopup.qml  PowerOffPopup.qml
src/qml/scan/: ScanComplete.qml  ScanMain.qml  ScanMain43.qml  ScanReady.qml  ScanningPopup.qml  SpaceDataInfo.qml  StatusBar.qml
src/qml/settings/: NetworkSettings.qml  SettingsDelegate2.qml  SettingsMain.qml  SettingsMain22.qml  SettingsProductInfo.qml  SettingsUserInfo.qml  WifiPassword.qml
src/resources/localization/: Dimenvue_en-us.qm  Dimenvue_ko.ts
